--- a/luci-app-openclash/files/etc/openclash/lhie1.yaml
+++ b/luci-app-openclash/files/etc/openclash/lhie1.yaml
@@ -1,132 +1,3 @@
-rules:
-##updated
-##source:lhie1
-- RULE-SET,Reject,AdBlock
-- RULE-SET,Special,DIRECT
-
-- RULE-SET,Netflix,Netflix
-- RULE-SET,Spotify,Spotify
-
-# - RULE-SET,YouTube Music,YouTube
-- RULE-SET,YouTube,YouTube
-
-- RULE-SET,Bilibili,AsianTV
-- RULE-SET,iQiyi,AsianTV
-- RULE-SET,Letv,AsianTV
-# - RULE-SET,MOO,AsianTV
-- RULE-SET,Netease Music,AsianTV
-- RULE-SET,Tencent Video,AsianTV
-- RULE-SET,Youku,AsianTV
-
-- RULE-SET,ABC,GlobalTV
-- RULE-SET,Abema TV,GlobalTV
-- RULE-SET,Amazon,GlobalTV
-- RULE-SET,Apple News,GlobalTV
-- RULE-SET,Apple TV,GlobalTV
-- RULE-SET,Bahamut,GlobalTV
-- RULE-SET,BBC iPlayer,GlobalTV
-- RULE-SET,DAZN,GlobalTV
-- RULE-SET,Disney Plus,GlobalTV
-- RULE-SET,encoreTVB,GlobalTV
-- RULE-SET,Fox Now,GlobalTV
-- RULE-SET,Fox+,GlobalTV
-- RULE-SET,HBO,GlobalTV
-- RULE-SET,Hulu Japan,GlobalTV
-- RULE-SET,Hulu,GlobalTV
-- RULE-SET,Japonx,GlobalTV
-- RULE-SET,JOOX,GlobalTV
-- RULE-SET,KKBOX,GlobalTV
-- RULE-SET,KKTV,GlobalTV
-- RULE-SET,Line TV,GlobalTV
-- RULE-SET,myTV SUPER,GlobalTV
-- RULE-SET,Pandora,GlobalTV
-- RULE-SET,PBS,GlobalTV
-- RULE-SET,Pornhub,GlobalTV
-- RULE-SET,Soundcloud,GlobalTV
-- RULE-SET,ViuTV,GlobalTV
-
-- RULE-SET,Telegram,Telegram
-- RULE-SET,Steam,Steam
-- RULE-SET,Speedtest,Speedtest
-- RULE-SET,PayPal,PayPal
-- RULE-SET,Microsoft,Microsoft
-
-- RULE-SET,PROXY,Proxy
-- RULE-SET,Domestic,Domestic
-- RULE-SET,Apple,Apple
-
-- GEOIP,CN,Domestic
-- MATCH,Others
-
-script:
-  code: |
-    def main(ctx, metadata):
-        ip = ctx.resolve_ip(metadata["host"])
-        if ip == "":
-          return "DIRECT"
-
-        code = ctx.geoip(ip)
-        if code == "CN":
-          return "Domestic"
-
-        port_list = [21, 22, 23, 53, 80, 123, 143, 194, 443, 465, 587, 853, 993, 995, 998, 2052, 2053, 2082, 2083, 2086, 2095, 2096, 5222, 5228, 5229, 5230, 8080, 8443, 8880, 8888, 8889]
-        ruleset_action = {"Reject": "AdBlock",
-            "Special": "DIRECT",
-            "Netflix": "Netflix",
-            "Spotify": "Spotify",
-            "YouTube": "YouTube",
-            "Bilibili": "AsianTV",
-            "iQiyi": "AsianTV",
-            "Letv": "AsianTV",
-            "Netease Music": "AsianTV",
-            "Tencent Video": "AsianTV",
-            "Youku": "AsianTV",
-            "ABC": "GlobalTV",
-            "Abema TV": "GlobalTV",
-            "Amazon": "GlobalTV",
-            "Apple News": "GlobalTV",
-            "Apple TV": "GlobalTV",
-            "Bahamut": "GlobalTV",
-            "BBC iPlayer": "GlobalTV",
-            "DAZN": "GlobalTV",
-            "Disney Plus": "GlobalTV",
-            "encoreTVB": "GlobalTV",
-            "Fox Now": "GlobalTV",
-            "Fox+": "GlobalTV",
-            "HBO": "GlobalTV",
-            "Hulu Japan": "GlobalTV",
-            "Hulu": "GlobalTV",
-            "Japonx": "GlobalTV",
-            "JOOX": "GlobalTV",
-            "KKBOX": "GlobalTV",
-            "KKTV": "GlobalTV",
-            "Line TV": "GlobalTV",
-            "myTV SUPER": "GlobalTV",
-            "Pandora": "GlobalTV",
-            "PBS": "GlobalTV",
-            "Pornhub": "GlobalTV",
-            "Soundcloud": "GlobalTV",
-            "ViuTV": "GlobalTV",
-            "Telegram": "Telegram",
-            "Steam": "Steam",
-            "Speedtest": "Speedtest",
-            "PayPal": "PayPal",
-            "Microsoft": "Microsoft",
-            "PROXY": "Proxy",
-            "Domestic": "Domestic",
-            "Apple": "Apple"
-            }
-        port = int(metadata["dst_port"])
-
-        if port not in port_list:
-            return "DIRECT"
-
-        for rule_name in ctx.rule_providers.keys():
-            if ctx.rule_providers[rule_name].match(metadata):
-                return ruleset_action[rule_name]
-
-        return "Others"
-
 rule-providers:
   Reject:
     type: http
@@ -410,3 +281,143 @@ rule-providers:
     url: 'https://git.dler.io/lhie1/Rules/master/Clash/Provider/Apple.yaml'
     path: ./Rules/Apple
     interval: 86400
+  Domestic IPs:
+    type: http
+    behavior: ipcidr
+    url: 'https://git.dler.io/lhie1/Rules/master/Clash/Provider/Domestic%20IPs.yaml'
+    path: ./Rules/Domestic_IPs
+    interval: 86400
+script:
+  code: |
+    def main(ctx, metadata):
+        port_list = [21, 22, 23, 53, 80, 123, 143, 194, 443, 465, 587, 853, 993, 995, 998, 2052, 2053, 2082, 2083, 2086, 2095, 2096, 5222, 5228, 5229, 5230, 8080, 8443, 8880, 8888, 8889]
+        ruleset_action = {"Reject": "AdBlock",
+            "Special": "DIRECT",
+            "Netflix": "Netflix",
+            "Spotify": "Spotify",
+            "YouTube": "YouTube",
+            "Bilibili": "AsianTV",
+            "iQiyi": "AsianTV",
+            "Letv": "AsianTV",
+            "Netease Music": "AsianTV",
+            "Tencent Video": "AsianTV",
+            "Youku": "AsianTV",
+            "ABC": "GlobalTV",
+            "Abema TV": "GlobalTV",
+            "Amazon": "GlobalTV",
+            "Apple News": "GlobalTV",
+            "Apple TV": "GlobalTV",
+            "Bahamut": "GlobalTV",
+            "BBC iPlayer": "GlobalTV",
+            "DAZN": "GlobalTV",
+            "Disney Plus": "GlobalTV",
+            "encoreTVB": "GlobalTV",
+            "Fox Now": "GlobalTV",
+            "Fox+": "GlobalTV",
+            "HBO": "GlobalTV",
+            "Hulu Japan": "GlobalTV",
+            "Hulu": "GlobalTV",
+            "Japonx": "GlobalTV",
+            "JOOX": "GlobalTV",
+            "KKBOX": "GlobalTV",
+            "KKTV": "GlobalTV",
+            "Line TV": "GlobalTV",
+            "myTV SUPER": "GlobalTV",
+            "Pandora": "GlobalTV",
+            "PBS": "GlobalTV",
+            "Pornhub": "GlobalTV",
+            "Soundcloud": "GlobalTV",
+            "ViuTV": "GlobalTV",
+            "Telegram": "Telegram",
+            "Steam": "Steam",
+            "Speedtest": "Speedtest",
+            "PayPal": "PayPal",
+            "Microsoft": "Microsoft",
+            "PROXY": "Proxy",
+            "Domestic": "Domestic",
+            "Domestic IPs": "Domestic",
+            "Apple": "Apple"
+            }
+        port = int(metadata["dst_port"])
+
+        if port not in port_list:
+            return "DIRECT"
+
+        for rule_name in ctx.rule_providers.keys():
+            if ctx.rule_providers[rule_name].match(metadata):
+                return ruleset_action[rule_name]
+
+        ip = metadata["dst_ip"] or ctx.resolve_ip(metadata["host"])
+
+        if ip == "":
+          return "DIRECT"
+
+        code = ctx.geoip(ip)
+        if code == "CN":
+          return "Domestic"
+
+        if code == "LAN":
+          return "DIRECT"
+
+        return "Others"
+
+rules:
+##source:lhie1
+- RULE-SET,Reject,AdBlock
+- RULE-SET,Special,DIRECT
+
+- RULE-SET,Netflix,Netflix
+- RULE-SET,Spotify,Spotify
+
+# - RULE-SET,YouTube Music,YouTube
+- RULE-SET,YouTube,YouTube
+
+- RULE-SET,Bilibili,AsianTV
+- RULE-SET,iQiyi,AsianTV
+- RULE-SET,Letv,AsianTV
+# - RULE-SET,MOO,AsianTV
+- RULE-SET,Netease Music,AsianTV
+- RULE-SET,Tencent Video,AsianTV
+- RULE-SET,Youku,AsianTV
+
+- RULE-SET,ABC,GlobalTV
+- RULE-SET,Abema TV,GlobalTV
+- RULE-SET,Amazon,GlobalTV
+- RULE-SET,Apple News,GlobalTV
+- RULE-SET,Apple TV,GlobalTV
+- RULE-SET,Bahamut,GlobalTV
+- RULE-SET,BBC iPlayer,GlobalTV
+- RULE-SET,DAZN,GlobalTV
+- RULE-SET,Disney Plus,GlobalTV
+- RULE-SET,encoreTVB,GlobalTV
+- RULE-SET,Fox Now,GlobalTV
+- RULE-SET,Fox+,GlobalTV
+- RULE-SET,HBO,GlobalTV
+- RULE-SET,Hulu Japan,GlobalTV
+- RULE-SET,Hulu,GlobalTV
+- RULE-SET,Japonx,GlobalTV
+- RULE-SET,JOOX,GlobalTV
+- RULE-SET,KKBOX,GlobalTV
+- RULE-SET,KKTV,GlobalTV
+- RULE-SET,Line TV,GlobalTV
+- RULE-SET,myTV SUPER,GlobalTV
+- RULE-SET,Pandora,GlobalTV
+- RULE-SET,PBS,GlobalTV
+- RULE-SET,Pornhub,GlobalTV
+- RULE-SET,Soundcloud,GlobalTV
+- RULE-SET,ViuTV,GlobalTV
+
+- RULE-SET,Telegram,Telegram
+- RULE-SET,Steam,Steam
+- RULE-SET,Speedtest,Speedtest
+- RULE-SET,PayPal,PayPal
+- RULE-SET,Microsoft,Microsoft
+
+- RULE-SET,PROXY,Proxy
+- RULE-SET,Domestic,Domestic
+- RULE-SET,Domestic IPs,Domestic
+- RULE-SET,Apple,Apple
+
+- GEOIP,CN,Domestic
+- MATCH,Others
+
