--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -22,9 +22,6 @@ define Package/$(PKG_NAME)/description
     A LuCI support for clash
 endef
 
-define Package/$(PKG_NAME)/postinst
-endef
-
 define Build/Prepare
 	$(CP) $(CURDIR)/files $(PKG_BUILD_DIR)
 	$(foreach po,$(wildcard ${CURDIR}/i18n/zh-cn/*.po), \
@@ -192,10 +189,12 @@ fi
 	rm -rf /tmp/openclash_start.log >/dev/null 2>&1
 	rm -rf /tmp/Proxy_Group >/dev/null 2>&1
 	rm -rf /tmp/rules_name >/dev/null 2>&1
+	rm -rf /tmp/rule_providers_name >/dev/null 2>&1
 	rm -rf /tmp/openclash_last_version >/dev/null 2>&1
 	rm -rf /tmp/clash_last_version >/dev/null 2>&1
 	rm -rf /etc/openclash/dnsmasq_fake_block.conf >/dev/null 2>&1
 	rm -rf /etc/openclash/clash >/dev/null 2>&1
+	rm -rf /usr/share/openclash/backup >/dev/null 2>&1
 	uci delete firewall.openclash >/dev/null 2>&1
 	uci commit firewall >/dev/null 2>&1
 	uci delete ucitrack.@openclash[-1] >/dev/null 2>&1
