--- a/.github/workflows/clear_cache.yml
+++ b/.github/workflows/clear_cache.yml
@@ -30,5 +30,5 @@ jobs:
       run: |
           for i in ${{ steps.changed_files.outputs.added_modified }}; do
              # echo ${{ steps.changed_files.outputs.all }}
-             curl -sL --retry 3 https://purge.jsdelivr.net/gh/vernesong/OpenClash@master/$i
+             curl -sL --retry 3 https://purge.jsdelivr.net/gh/vernesong/OpenClash@${{ GITHUB_REF_NAME }}/$i
           done
