--- a/luci-app-openclash/root/etc/openclash/custom/openclash_sniffing_domain_filter.yaml
+++ b/luci-app-openclash/root/etc/openclash/custom/openclash_sniffing_domain_filter.yaml
@@ -1,3 +1,4 @@
 skip-sni:
-#  - '+.push.apple.com'
-#  - 'courier.push.apple.com' 
+  - '+.courier.push.apple.com'
+  - 'Mijia Cloud'
+  - '+.jd.com'
