--- a/luci-app-openclash/root/etc/openclash/custom/openclash_force_sniffing_domain.yaml
+++ b/luci-app-openclash/root/etc/openclash/custom/openclash_force_sniffing_domain.yaml
@@ -1,6 +1,6 @@
 force-domain:
 #  - '+'
-  - '*.netflix.com'
+  - '+.netflix.com'
   - '+.nflxvideo.net'
   - '+.amazonaws.com'
   - '+.media.dssott.com'
