--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-openclash
-PKG_VERSION:=0.45.37
+PKG_VERSION:=0.45.38
 PKG_RELEASE:=beta
 PKG_MAINTAINER:=vernesong <https://github.com/vernesong/OpenClash>
 
@@ -94,14 +94,21 @@ endef
 define Package/$(PKG_NAME)/postrm
 #!/bin/sh
 	rm -rf /etc/openclash >/dev/null 2>&1
-	rm -rf /tmp/openclash* >/dev/null 2>&1
+	rm -rf /tmp/openclash.log >/dev/null 2>&1
+	rm -rf /tmp/openclash_start.log >/dev/null 2>&1
+	rm -rf /tmp/openclash_last_version >/dev/null 2>&1
+	rm -rf /tmp/openclash_config.tmp >/dev/null 2>&1
+	rm -rf /tmp/openclash.change >/dev/null 2>&1
 	rm -rf /tmp/Proxy_Group >/dev/null 2>&1
-	rm -rf /tmp/rules* >/dev/null 2>&1
-	rm -rf /tmp/clash* >/dev/null 2>&1
+	rm -rf /tmp/rules_name >/dev/null 2>&1
+	rm -rf /tmp/rule_providers_name >/dev/null 2>&1
+	rm -rf /tmp/clash_last_version >/dev/null 2>&1
 	rm -rf /usr/share/openclash/backup >/dev/null 2>&1
-	rm -rf /tmp/dnsmasq.d/dnsmasq_openclash* >/dev/null 2>&1
+	rm -rf /tmp/dnsmasq.d/dnsmasq_openclash.conf >/dev/null 2>&1
+	rm -rf /tmp/dnsmasq.d/dnsmasq_openclash_custom_domain.conf >/dev/null 2>&1
 	rm -rf /tmp/dler* >/dev/null 2>&1
 	rm -rf /tmp/etc/openclash >/dev/null 2>&1
+	rm -rf /tmp/openclash_edit_file_name >/dev/null 2>&1
 	sed -i '/OpenClash Append/,/OpenClash Append End/d' "/usr/lib/lua/luci/model/network.lua" >/dev/null 2>&1
 	uci -q delete firewall.openclash
 	uci -q commit firewall
